crates/laserbeam/tests/compile_fail/no_role.rs
use laserbeam::Laserbeam;

#[derive(Laserbeam)]
struct Missing {
    value: u32,
}

fn main() {}
